# odoo_addon_manager

./: .gitignore  Containerfile  pyproject.toml  readme.md
.github/workflows/: build-image.yml  run-tests.yml
src/: main.py
tests/: test_cli.py
